fix width overflow

--- a/BlazorPWA2/wwwroot/css/app.css
+++ b/BlazorPWA2/wwwroot/css/app.css
@@ -245,7 +245,8 @@ a,
 
 .page-body-content {
     padding: .5rem;
-    width: 100svh;
+    width: 100svw;
+    overflow: hidden;
 }
 
 .justify-content-space-between {
